[package]
name = "school"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
iced = {version = "0.5.2", features = ["image"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", features = ["tabs", "modal"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
notify-rust = "*"

[profile.dev.package.school]
opt-level = 0 

[profile.dev.package."*"]
opt-level = 3
